--- a/src/sass/imports/_content.scss
+++ b/src/sass/imports/_content.scss
@@ -157,8 +157,9 @@
   }
 }
 
-@media only screen and (min-width: 801px) and (max-width: 1000px), only screen and (max-width: 600px) {
-.post-feed .post {
+@media only screen and (min-width: 801px) and (max-width: 1000px),
+  only screen and (max-width: 600px) {
+  .post-feed .post {
     -webkit-flex: 0 0 100%;
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
